--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1178,6 +1178,7 @@
 		"select_Language":"Sprache wählen",
 		"DeleteMessages" :"Nachricht löschen",
 		"marital_status":"Familienstand",
-		"select_marital_status":"Wählen Sie Familienstand"
+		"select_marital_status":"Wählen Sie Familienstand",
+		"respiration":"Atmung"
 	}
 }
