--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1803,6 +1803,7 @@
 		"select_Language":"Selecteer taal",
 		"DeleteMessages" :"Verwijder bericht",
 		"marital_status":"Burgerlijke staat",
-		"select_marital_status":"Selecteer Burgerlijke staat"
+		"select_marital_status":"Selecteer Burgerlijke staat",
+		"respiration":"Ademhaling"
 	}
 }
