--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1212,6 +1212,7 @@
 		"select_Language":"Chagua Lugha",
 		"DeleteMessages" :"Futa Ujumbe",
 		"marital_status":"Hali ya ndoa",
-		"select_marital_status":"Chagua Hali ya Ndoa"
+		"select_marital_status":"Chagua Hali ya Ndoa",
+		"respiration":"Kupumua"
 	}
 }
