--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1173,6 +1173,7 @@
 		"select_Language":"اختار اللغة",
 		"DeleteMessages" :"حذف رسالة",
 		"marital_status":"الزوجية الحالة",
-		"select_marital_status":"حدد الحالة الاجتماعية"
+		"select_marital_status":"حدد الحالة الاجتماعية",
+		"respiration":"التنفس"
 		}
 }
