--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1179,6 +1179,7 @@
 		"select_Language":"Choisir la langue",
 		"DeleteMessages" :"Supprimer le message",
 		"marital_status":"État civil",
-		"select_marital_status":"Sélectionnez l'état matrimonial"
+		"select_marital_status":"Sélectionnez l'état matrimonial",
+		"respiration":"Respiration"
 	}
 }
