Hospital user at user end changes

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1173,7 +1173,6 @@
 		"select_Language":"اختار اللغة",
 		"DeleteMessages" :"حذف رسالة",
 		"marital_status":"الزوجية الحالة",
-		"select_marital_status":"حدد الحالة الاجتماعية",
-		"respiration":"التنفس"
+		"select_marital_status":"حدد الحالة الاجتماعية"
 		}
 }
