--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1199,7 +1199,6 @@
 		"select_Language":"选择语言",
 		"DeleteMessages" :"删除留言",
 		"marital_status":"婚姻状况",
-		"select_marital_status":"选择婚姻状况",
-		"respiration":"呼吸"
+		"select_marital_status":"选择婚姻状况"
 	}
 }
