--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1804,6 +1804,8 @@
 		"DeleteMessages" :"Verwijder bericht",
 		"marital_status":"Burgerlijke staat",
 		"select_marital_status":"Selecteer Burgerlijke staat",
-		"respiration":"Ademhaling"
+		"respiration":"Ademhaling",
+		"course_not_updt_cannt_reach_srvr": "Cursus is niet toegevoegd. Kan de server niet bereiken",
+		"CourseAddedMyCourses" : "Cursus met succes toegevoegd in Mijn cursussen"
 	}
 }
