--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1194,6 +1194,8 @@
 		"DeleteMessages" :"Apagar mensagem",
 		"marital_status":"Estado civil",
 		"select_marital_status":"Selecione o estado civil",
-		"respiration":"Respiração"
+		"respiration":"Respiração",
+		"course_not_updt_cannt_reach_srvr": "O curso não foi adicionado. Não é possível acessar o servidor",
+		"CourseAddedMyCourses" : "Curso adicionado com sucesso em Meus cursos"
 	}
 }
