--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1174,6 +1174,8 @@
 		"DeleteMessages" :"حذف رسالة",
 		"marital_status":"الزوجية الحالة",
 		"select_marital_status":"حدد الحالة الاجتماعية",
-		"respiration":"التنفس"
+		"respiration":"التنفس",
+		"course_not_updt_cannt_reach_srvr": "لم يتم إضافة الدورة. لا يمكن الوصول إلى الخادم",
+		"CourseAddedMyCourses" : "تمت إضافة الدورة بنجاح في دوراتي"
 		}
 }
