--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1200,6 +1200,8 @@
 		"DeleteMessages" :"删除留言",
 		"marital_status":"婚姻状况",
 		"select_marital_status":"选择婚姻状况",
-		"respiration":"呼吸"
+		"respiration":"呼吸",
+		"course_not_updt_cannt_reach_srvr": "课程未添加。无法到达服务器",
+		"CourseAddedMyCourses" : "课程已成功添加到“我的课程”中"
 	}
 }
