--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1181,6 +1181,9 @@
 		"select_marital_status":"Wählen Sie Familienstand",
 		"respiration":"Atmung",
 		"course_not_updt_cannt_reach_srvr": "Kurs wird nicht hinzugefügt. Kann nicht zum Server erreichen",
-		"CourseAddedMyCourses" : "Kurs erfolgreich in Meine Kurse hinzugefügt"
+		"CourseAddedMyCourses" : "Kurs erfolgreich in Meine Kurse hinzugefügt",
+		"RBPharmacy":"Vom Apotheker erhaltent",
+		"SentPrescriptions" :"Verschickte Rezepte",
+		"Enrolled" : "Eingeschrieben"
 	}
 }
