--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1182,6 +1182,9 @@
     "select_marital_status":"Выберите семейное положение",
     "respiration":"Дыхание",
     "course_not_updt_cannt_reach_srvr": "Курс не добавляется. Невозможно связаться с сервером",
-		"CourseAddedMyCourses" : "Курс успешно добавлен в Мои курсы"
+		"CourseAddedMyCourses" : "Курс успешно добавлен в Мои курсы",
+    "RBPharmacy":"Получено фармацевтом",
+		"SentPrescriptions" :"Отправленные рецепты",
+    "Enrolled" : "Зарегистрирован"
   }
 }
