language of section more show and implement on nurse, doctor, pharmacy too.

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1179,6 +1179,7 @@
 		"CourseAddedMyCourses" : "تمت إضافة الدورة بنجاح في دوراتي",
 		"RBPharmacy":"استقبله صيدلي",
 		"SentPrescriptions" :"الوصفات الطبية المرسلة",
-		"Enrolled" : "المقيدين"
+		"Enrolled" : "المقيدين",
+		"Seemore10entries" : "انظر أكثر من 10 مداخل"
 		}
 }
