--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1205,6 +1205,7 @@
 		"CourseAddedMyCourses" : "课程已成功添加到“我的课程”中",
 		"RBPharmacy":"收到药剂师",
 		"SentPrescriptions" :"发送处方",
-		"Enrolled" : "已入学"
+		"Enrolled" : "已入学",
+		"Seemore10entries" : "查看更多10条目"
 	}
 }
