--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1184,6 +1184,7 @@
 		"CourseAddedMyCourses" : "Kurs erfolgreich in Meine Kurse hinzugefügt",
 		"RBPharmacy":"Vom Apotheker erhaltent",
 		"SentPrescriptions" :"Verschickte Rezepte",
-		"Enrolled" : "Eingeschrieben"
+		"Enrolled" : "Eingeschrieben",
+		"Seemore10entries" : "Weitere 10 Einträge anzeigen"
 	}
 }
