--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1809,6 +1809,7 @@
 		"CourseAddedMyCourses" : "Cursus met succes toegevoegd in Mijn cursussen",
 		"RBPharmacy":"Ontvangen door apotheker",
 		"SentPrescriptions" :"Verzonden recepten",
-		"Enrolled" : "Ingeschreven"
+		"Enrolled" : "Ingeschreven",
+		"Seemore10entries" : "Zie meer 10 inzendingen"
 	}
 }
