--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1199,6 +1199,7 @@
 		"CourseAddedMyCourses" : "Curso adicionado com sucesso em Meus cursos",
 		"RBPharmacy":"Recebido por Farmacêutico",
 		"SentPrescriptions" :"Receitas enviadas",
-		"Enrolled" : "Inscrito"
+		"Enrolled" : "Inscrito",
+		"Seemore10entries" : "Veja mais 10 entradas"
 	}
 }
