--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1188,6 +1188,7 @@
 		"CourseAddedMyCourses" : "Curso agregado con éxito en Mis cursos",
 		"RBPharmacy":"Recibida por la farmacéutica",
 		"SentPrescriptions" :"Recetas enviadas",
-		"Enrolled" : "Inscrito"
+		"Enrolled" : "Inscrito",
+		"Seemore10entries" : "Ver más 10 entradas"
 	}
 }
