--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1218,6 +1218,7 @@
 		"CourseAddedMyCourses" : "Kozi imeongezwa kwa mafanikio katika kozi Zangu",
 		"RBPharmacy":"Imepokelewa na Mfamasia",
 		"SentPrescriptions" :"Maagizo yaliyotumwa",
-		"Enrolled" : "Wamesajiliwa"
+		"Enrolled" : "Wamesajiliwa",
+		"Seemore10entries" : "Angalia wasilisho 10 zaidi"
 	}
 }
