--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1187,6 +1187,10 @@
 		"RBPharmacy":"Received by Pharmacist",
 		"SentPrescriptions" :"Sent Prescriptions",
 		"Enrolled" : "Enrolled",
+		"UnableCancel" : "You are unable to cancel the appointment.",
+		"appointment_can_be_cancelled" : "Appointment can be cancelled:",
+		"notmore24": "Please enter less than 24 hours",
+		"NotAvailable":"Not available",
 		"Seemore10entries" : "See more 10 entries"
 	}
 }
