--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1186,6 +1186,10 @@
 		"RBPharmacy":"Reçu par le pharmacien",
 		"SentPrescriptions" :"Ordonnances envoyées",
 		"Enrolled" : "Inscrit",
+		"UnableCancel" : "Vous ne pouvez pas annuler le rendez-vous.",
+		"appointment_can_be_cancelled" : "Le rendez-vous peut être annulé:",
+		"notmore24": "Veuillez saisir moins de 24 heures",
+		"NotAvailable":"Pas disponible",
 		"Seemore10entries" : "Voir plus de 10 entrées"
 	}
 }
