--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1204,6 +1204,8 @@
 		"appointment_can_be_cancelled" : "O compromisso pode ser cancelado:",
 		"notmore24": "Insira menos de 24 horas",
 		"NotAvailable":"Não disponível",
-		"Seemore10entries" : "Veja mais 10 entradas"
+		"Seemore10entries" : "Veja mais 10 entradas",
+		"showOnlyOverview" : "Mostrar apenas a visão geral",
+		"view_demo":"Ver demonstração"
 	}
 }
