--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1193,6 +1193,8 @@
 		"appointment_can_be_cancelled" : "La cita se puede cancelar:",
 		"notmore24": "Ingrese menos de 24 horas",
 		"NotAvailable":"No disponible",
-		"Seemore10entries" : "Ver más 10 entradas"
+		"Seemore10entries" : "Ver más 10 entradas",
+		"showOnlyOverview" : "Mostrar solo descripción general",
+		"view_demo":"Ver demo"
 	}
 }
