--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1184,6 +1184,8 @@
 		"appointment_can_be_cancelled" : "يمكن إلغاء الموعد:",
 		"notmore24": "الرجاء إدخال أقل من 24 ساعة",
 		"NotAvailable":"غير متوفر",
-		"Seemore10entries" : "انظر أكثر من 10 مداخل"
+		"Seemore10entries" : "انظر أكثر من 10 مداخل",
+		"showOnlyOverview" : "عرض نظرة عامة فقط",
+		"view_demo":"مشاهدة العرض"
 		}
 }
