--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1210,6 +1210,8 @@
 		"appointment_can_be_cancelled" : "可以取消约会：",
 		"notmore24": "请输入少于24小时",
 		"NotAvailable":"无法使用",
-		"Seemore10entries" : "查看更多10条目"
+		"Seemore10entries" : "查看更多10条目",
+		"showOnlyOverview" : "仅显示概述",
+		"view_demo":"观看演示"
 	}
 }
