--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1814,6 +1814,8 @@
 		"appointment_can_be_cancelled" : "Afspraak kan worden geannuleerd:", 
 		"notmore24": "Voer a.u.b. minder dan 24 uur in",
 		"NotAvailable":"Niet beschikbaar",
-		"Seemore10entries" : "Zie meer 10 inzendingen"
+		"Seemore10entries" : "Zie meer 10 inzendingen",
+		"showOnlyOverview" : "Alleen overzicht weergeven",
+		"view_demo":"Bekijk demo"
 	}
 }
