--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1190,6 +1190,8 @@
     "appointment_can_be_cancelled" : "Прием можно отменить:",
     "notmore24": "Пожалуйста, введите менее 24 часов",
     "NotAvailable":"Нет в наличии",
-    "Seemore10entries" : "Посмотреть еще 10 записей"
+    "Seemore10entries" : "Посмотреть еще 10 записей",
+    "showOnlyOverview" : "Показать только обзор",
+    "view_demo":"Посмотреть демо"
   }
 }
