--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1223,6 +1223,8 @@
 		"appointment_can_be_cancelled" : "Uteuzi unaweza kufutwa:",
 		"notmore24": "Tafadhali ingiza chini ya masaa 24",
 		"NotAvailable":"Haipatikani",
-		"Seemore10entries" : "Angalia wasilisho 10 zaidi"
+		"Seemore10entries" : "Angalia wasilisho 10 zaidi",
+		"showOnlyOverview" : "Onyesha Muhtasari tu",
+		"view_demo":"Angalia onyesho"
 	}
 }
