To add new field message language

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1186,6 +1186,7 @@
 		"NotAvailable":"غير متوفر",
 		"Seemore10entries" : "انظر أكثر من 10 مداخل",
 		"showOnlyOverview" : "عرض نظرة عامة فقط",
-		"view_demo":"مشاهدة العرض"
+		"view_demo":"مشاهدة العرض",
+		"SMSEmailLanguage" :"لغة الرسائل القصيرة / البريد الإلكتروني"
 		}
 }
