--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1192,6 +1192,7 @@
 		"NotAvailable":"Pas disponible",
 		"Seemore10entries" : "Voir plus de 10 entrées",
 		"showOnlyOverview" : "Afficher seulement l'aperçu",
-		"view_demo":"Voir la démo"
+		"view_demo":"Voir la démo",
+		"SMSEmailLanguage" :"Langue SMS / Email"
 	}
 }
