--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1206,6 +1206,7 @@
 		"NotAvailable":"Não disponível",
 		"Seemore10entries" : "Veja mais 10 entradas",
 		"showOnlyOverview" : "Mostrar apenas a visão geral",
-		"view_demo":"Ver demonstração"
+		"view_demo":"Ver demonstração",
+		"SMSEmailLanguage" :"Idioma de SMS / Email"
 	}
 }
