--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1191,6 +1191,7 @@
 		"NotAvailable":"Nicht verfügbar",
 		"Seemore10entries" : "Weitere 10 Einträge anzeigen",
 		"showOnlyOverview" : "Nur Übersicht anzeigen",
-		"view_demo":"Demo anzeigen"
+		"view_demo":"Demo anzeigen",
+		"SMSEmailLanguage" :"SMS / E-Mail-Sprache"
 	}
 }
