--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1816,6 +1816,7 @@
 		"NotAvailable":"Niet beschikbaar",
 		"Seemore10entries" : "Zie meer 10 inzendingen",
 		"showOnlyOverview" : "Alleen overzicht weergeven",
-		"view_demo":"Bekijk demo"
+		"view_demo":"Bekijk demo",
+		"SMSEmailLanguage" :"SMS / e-mailtaal"
 	}
 }
