--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1195,6 +1195,7 @@
 		"NotAvailable":"No disponible",
 		"Seemore10entries" : "Ver más 10 entradas",
 		"showOnlyOverview" : "Mostrar solo descripción general",
-		"view_demo":"Ver demo"
+		"view_demo":"Ver demo",
+		"SMSEmailLanguage" :"Idioma de SMS / correo electrónico"
 	}
 }
