doctor visit with hint, doctor end - journal profile section, default German flag on profile  update, date of vaccination, organ donor issue, prescription archive

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1187,6 +1187,7 @@
 		"Seemore10entries" : "انظر أكثر من 10 مداخل",
 		"showOnlyOverview" : "عرض نظرة عامة فقط",
 		"view_demo":"مشاهدة العرض",
-		"SMSEmailLanguage" :"لغة الرسائل القصيرة / البريد الإلكتروني"
+		"SMSEmailLanguage" :"لغة الرسائل القصيرة / البريد الإلكتروني",
+		"Noimageavailable" : "لا توجد صور متاحة"
 		}
 }
