--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1194,6 +1194,7 @@
 		"Seemore10entries" : "See more 10 entries",
 		"showOnlyOverview" : "Show Only Overview",
 		"view_demo":"View demo",
-		"SMSEmailLanguage" :"SMS / Email Language"
+		"SMSEmailLanguage" :"SMS / Email Language",
+		"Noimageavailable" : "No image available"
 	}
 }
