--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1207,6 +1207,7 @@
 		"Seemore10entries" : "Veja mais 10 entradas",
 		"showOnlyOverview" : "Mostrar apenas a visão geral",
 		"view_demo":"Ver demonstração",
-		"SMSEmailLanguage" :"Idioma de SMS / Email"
+		"SMSEmailLanguage" :"Idioma de SMS / Email",
+		"Noimageavailable" : "Nenhuma imagem disponível"
 	}
 }
