--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1226,6 +1226,7 @@
 		"Seemore10entries" : "Angalia wasilisho 10 zaidi",
 		"showOnlyOverview" : "Onyesha Muhtasari tu",
 		"view_demo":"Angalia onyesho",
-		"SMSEmailLanguage" :"Lugha ya SMS / Barua pepe"
+		"SMSEmailLanguage" :"Lugha ya SMS / Barua pepe",
+		"Noimageavailable" : "Hakuna picha inayopatikana"
 	}
 }
